
cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/IO")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/SDK")
message(STATUS ${PROJECT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 11)

FILE(GLOB SOURCE_RTKLIB ${PROJECT_SOURCE_DIR}/IO/src/Rtklib/*.cpp)
FILE(GLOB SOURCE_MAIN ${PROJECT_SOURCE_DIR}/IO/src/*.cpp)

set(SOURCE_KPLIO ${SOURCE_RTKLIB} ${SOURCE_MAIN}) 
add_library(KPL_IO STATIC ${SOURCE_KPLIO})
#target_link_libraries(KPL_IO KPL_SDK)