cmake_minimum_required(VERSION 2.8)
# ####################################################################################################
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/SDK/")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/IO/")

set(CMAKE_CXX_STANDARD 11)
# add static libraries
set(bbo_libs)
FILE(GLOB SOURCE_ADAPTER_ATOMSPHERE ${PROJECT_SOURCE_DIR}/SDK/src/Adapter/Atomsphere/*.cpp)
FILE(GLOB SOURCE_ADAPTER_ORBCLK ${PROJECT_SOURCE_DIR}/SDK/src/Adapter/Orbclk/*.cpp)
FILE(GLOB SOURCE_ADAPTER_IFPB ${PROJECT_SOURCE_DIR}/SDK/src/Adapter/Ifpb/*.cpp)
FILE(GLOB SOURCE_ADAPTER_UPD ${PROJECT_SOURCE_DIR}/SDK/src/Adapter/Upd/*.cpp)
FILE(GLOB SOURCE_ADAPTER_CODEBIAS ${PROJECT_SOURCE_DIR}/SDK/src/Adapter/CodeBias/*.cpp)
FILE(GLOB SOURCE_ADAPTER_ANTOBX ${PROJECT_SOURCE_DIR}/SDK/src/Adapter/Antobx/*.cpp)

FILE(GLOB SOURCE_CONTROLLER ${PROJECT_SOURCE_DIR}/SDK/src/Controller/*.cpp)
FILE(GLOB SOURCE_INTERFACE ${PROJECT_SOURCE_DIR}/SDK/src/Interface/*.cpp)
FILE(GLOB SOURCE_CORE_AMBFIX ${PROJECT_SOURCE_DIR}/SDK/src/Core/Ambfix/*.cpp)
FILE(GLOB SOURCE_CORE_DIA ${PROJECT_SOURCE_DIR}/SDK/src/Core/DIA/*.cpp)
FILE(GLOB SOURCE_CORE ${PROJECT_SOURCE_DIR}/SDK/src/Core/*.cpp)
FILE(GLOB SOURCE_CONFIG_UTILS_COM ${PROJECT_SOURCE_DIR}/SDK/src/Utils/Com/*.cpp)
FILE(GLOB SOURCE_CONFIG_UTILS_JSON ${PROJECT_SOURCE_DIR}/SDK/src/Utils/Json/*.cpp)
FILE(GLOB SOURCE_CONFIG_UTILS_RTKLIB ${PROJECT_SOURCE_DIR}/SDK/src/Utils/Rtklib/*.cpp)
FILE(GLOB SOURCE_CONFIG_UTILS_INNERLINK ${PROJECT_SOURCE_DIR}/SDK/src/Utils/InnerLink/*.cpp)

set(SOURCE_ALGO ${SOURCE_INTERFACE} ${SOURCE_ADAPTER_ANTOBX} ${SOURCE_ADAPTER_CODEBIAS} ${SOURCE_ADAPTER_UPD} ${SOURCE_ADAPTER_IFPB} ${SOURCE_ADAPTER_ATOMSPHERE} ${SOURCE_ADAPTER_ORBCLK} ${SOURCE_CONTROLLER} ${SOURCE_CORE_AMBFIX} ${SOURCE_CORE_DIA} ${SOURCE_CORE}
    ${SOURCE_CONFIG_UTILS_COM} ${SOURCE_CONFIG_UTILS_JSON} ${SOURCE_CONFIG_UTILS_RTKLIB} ${SOURCE_CONFIG_UTILS_INNERLINK})

FILE(GLOB SOURCE_GNSSCORRECTION_ANT ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Ant/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_DE405 ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/De405//*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_ION ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Ion/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_ITRS2GCRS ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Itrs2gcrs/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_MODEL ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Model/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_QC ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Qc/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_SOFA ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Sofa/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTIONS_TIDE ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Tide/*.cpp)
FILE(GLOB SOURCE_GNSSCORRECTION_TROPO ${PROJECT_SOURCE_DIR}/SDK/src/Corrections/Tropo/*.cpp)

set(SOURCE_COR ${SOURCE_GNSSCORRECTION_ANT} ${SOURCE_GNSSCORRECTION_DE405} ${SOURCE_GNSSCORRECTION_ITRS2GCRS}
${SOURCE_GNSSCORRECTION_MODEL} ${SOURCE_GNSSCORRECTION_QC} ${SOURCE_GNSSCORRECTION_SOFA}
${SOURCE_GNSSCORRECTIONS_TIDE} ${SOURCE_GNSSCORRECTION_TROPO} )

set(SOURCE_ALL ${SOURCE_COR} ${SOURCE_ALGO})
add_library(KPL_SDK STATIC ${SOURCE_ALL})
#target_link_libraries(KPL_SDK KPL_IO)


